--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ button {
 
 .search-bar {
     padding-top: 4em;
-    padding-bottom: 1em;
+    padding-bottom: 1em; 
     position: relative;
 }
 
@@ -243,11 +243,13 @@ button {
 }
 
 .search-input {
+    position: relative;
+    top: -2px;
     border-top-left-radius: 0.3em;
     border-bottom-left-radius: 0.3em;
     background: #2b303b;
     padding-top: 2.6px;
-    padding-left: 1em;
+    padding-left: 0.6em;
     border-top: none;
     border-bottom: none;
     border-right: 0;
@@ -257,6 +259,12 @@ button {
     -ms-transition: background .55s ease;
     -o-transition: background .55s ease;
     transition: background .55s ease;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+    .search-input {
+        top: -3px;
+    }
 }
 
 .input-bar input.search-input::-webkit-input-placeholder {
@@ -289,6 +297,15 @@ button {
     margin-right: auto;
     margin-left: auto;
     display: none;
+}
+
+#search-icon {
+    bottom: 1px;
+    width: 19px;
+    height: 19px;
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .go-research {
@@ -348,257 +365,257 @@ button {
 }
 
 
-@media (min-width: 600px) {
-
-    html {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        font-size:1.6vw;
-        -moz-osx-font-smoothing: grayscale;
-        line-height: 1.9vw;
-        background-color: black;
-        color: white;
-    }
-
-    .umovie-logo {
-        background: none;
-        position: relative;
-    }
-
-    body {
-        margin: 0;
-        padding: 0;
-        background-color: black;
-    }
-
-    button {
-        cursor: pointer;
-    }
-
-    /* ------ NAV-BAR  ----- */
-    #menu-content {
-        height: 70px;
-        position: relative;
-
-    }
-
-    .navigation-bar {
-        height: 25%;
-        box-sizing: border-box;
-        padding: 0px 3%;
-        width: 100%;
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 30%, transparent);
-
-        position: fixed;
-        top: 0px;
-        margin: 0px;
-    }
-
-    .navigation-bar{
-        display: inline-flex
-    }
-
-    /* ------ Left side nav-bar ------ */
-
-    .umovie-logo{
-        width:15%;
-    }
-
-    #expend-menu-icon{
-        display: none;
-    }
-
-    #site-logo {
-        height: 1.3em;
-        width: 5.7em;
-        padding: 0px;
-        margin: 0.96em 20px 0 0;
-        left: 0px;
-        background: transparent;
-    }
-
-    /* ------ Middle side nav-bar ------ */
-    .menu {
-        padding: 0;
-        margin: 0;
-        width: 100%;
-
-    }
-
-    .navigation-options {
-        position:initial;
-        width: inherit;
-
-        list-style: none;
-        background: #33333;
-        background-color: transparent;
-    }
-
-    .navigation-options li{
-        padding: 1em 1em 0.5em 1em;
-        top: 1em;
-        float:left;
-        color: white;
-        border: none;
-        display:-moz-groupbox;
-    }
-
-    .navigation-options li:hover {
-        background-color: transparent;
-    }
-
-    .navigation-options a {
-        text-decoration: none;
-        color: #96948B;
-    }
-
-    .navigation-options li a:hover {
-        background-color: transparent;
-        border: none;
-        color: #FFCC00;
-        font-style: bold;
-        font-size: 1.8vw;
-    }
-
-    /* ------ Right side nav-bar ------ */
-
-    .search-bar{
-        display: inline-flex;
-        padding: 1em 1em 0.5em;
-        float: right;
-        width: 26em;
-    }
-
-    .search-bar li a:hover {
-        background-color: transparent;
-        border: none;
-        color: #FFCC00;
-        font-style: bold;
-        font-size: 1.8vw;
-    }
-
-    .research-options {
-        color: transparent;
-    }
-
-    .search-input{
-        margin-left:0em;
-        color: black;
-        height: 2em;
-        display:initial ;
-        border-top-left-radius: 0.4em;
-        border-bottom-left-radius: 0.4em;
-        background: white;
-        padding-top: 0.3em;
-        padding-left: 1.4em;
-        border-top: none;
-        border-bottom: none;
-        border-right: 0;
-        border-left: 0;
-        -webkit-transition: background .55s ease;
-        -moz-transition: background .55s ease;
-        -ms-transition: background .55s ease;
-        -o-transition: background .55s ease;
-        transition: background .55s ease;
-        position: relative;
-    }
-
-    .input-bar input.search-input::-webkit-input-placeholder {
-
-        color: #65737e;
-    }
-
-    .input-bar input.search-input:-moz-placeholder {
-        color: #65737e;
-    }
-
-    .input-bar input.search-input::-moz-placeholder {
-        color: #65737e;
-    }
-
-    .input-bar input.search-input:-ms-input-placeholder {
-        color: #65737e;
-    }
-
-    .input-bar input.search-input:hover, .input-bar input.search-input:focus, .input-bar input.search-input:active {
-        outline:none;
-        color: black;
-        background: #FFCC00;
-    }
-    .go-research{
-        background: transparent;
-    }
-
-    /* ------ PAGE CONTENT ------ */
-    div #content {
-        max-width: 100%;
-        padding: 0;
-        background-color: black;
-        color: white;
-    }
-
-    #container{
-        background: black;
-        position: relative;
-        margin-top: -70px;
-    }
-
-    .movie-banner{
-        width: 100%;
-        height: auto;
-    }
-
-    .text h1, h2{
-        color: #FFCC00;
-    }
-
-    .text h1{
-        font-size: 4.1em;
-        text-align: center;
-
-        margin-top:-4.7em;
-    }
-
-    .text h2{
-        text-align: center;
-        font-size: 1.6em;
-    }
-
-    .authentification{
-        background-color: black;
-        opacity: 0.6;
-        color: white;
-        text-align: center;
-        width: 20em;
-        height: 12em;
-        position:absolute;
-
-        top:25%;
-        left:63%;
-
-        border-top-left-radius: 1.2em;
-        border-bottom-left-radius: 1.2em;
-        border-top-right-radius: 1.2em;
-        border-bottom-right-radius: 1.2em;
-        border: solid 1px black;
-
-    }
-
-    .connect p{
-        position:absolute;
-        margin-top:-50px;
-        margin-left:-10px;
-        top:35%;
-        left:25%;
-
-    }
-
-    .authentification input{
-        background-color: white;
-        margin: 0.7em;
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;
-        height: 3em;
-    }
-
-}
+ @media (min-width: 600px) {
+ 
+     html {
+         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+         font-size:1.6vw;
+         -moz-osx-font-smoothing: grayscale;
+         line-height: 1.9vw;
+         background-color: black;
+         color: white;
+     }
+ 
+     .umovie-logo {
+         background: none;
+         position: relative;
+     }
+ 
+     body {
+         margin: 0;
+         padding: 0;
+         background-color: black;
+     }
+ 
+     button {
+         cursor: pointer;
+     }
+ 
+     /* ------ NAV-BAR  ----- */
+     #menu-content {
+         height: 70px;
+         position: relative;
+ 
+     }
+ 
+     .navigation-bar {
+         height: 25%;
+         box-sizing: border-box;
+         padding: 0px 3%;
+         width: 100%;
+         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 30%, transparent);
+ 
+         position: fixed;
+         top: 0px;
+         margin: 0px;
+     }
+ 
+     .navigation-bar{
+         display: inline-flex
+     }
+ 
+     /* ------ Left side nav-bar ------ */
+ 
+     .umovie-logo{
+         width:15%;
+     }
+ 
+     #expend-menu-icon{
+         display: none;
+     }
+ 
+     #site-logo {
+         height: 1.3em;
+         width: 5.7em;
+         padding: 0px;
+         margin: 0.96em 20px 0 0;
+         left: 0px;
+         background: transparent;
+     }
+ 
+     /* ------ Middle side nav-bar ------ */
+     .menu {
+         padding: 0;
+         margin: 0;
+         width: 100%;
+ 
+     }
+ 
+     .navigation-options {
+         position:initial;
+         width: inherit;
+ 
+         list-style: none;
+         background: #33333;
+         background-color: transparent;
+     }
+ 
+     .navigation-options li{
+         padding: 1em 1em 0.5em 1em;
+         top: 1em;
+         float:left;
+         color: white;
+         border: none;
+         display:-moz-groupbox;
+     }
+ 
+     .navigation-options li:hover {
+         background-color: transparent;
+     }
+ 
+     .navigation-options a {
+         text-decoration: none;
+         color: #96948B;
+     }
+ 
+     .navigation-options li a:hover {
+         background-color: transparent;
+         border: none;
+         color: #FFCC00;
+         font-style: bold;
+         font-size: 1.8vw;
+     }
+ 
+     /* ------ Right side nav-bar ------ */
+ 
+     .search-bar{
+         display: inline-flex;
+         padding: 1em 1em 0.5em;
+         float: right;
+         width: 26em;
+     }
+ 
+     .search-bar li a:hover {
+         background-color: transparent;
+         border: none;
+         color: #FFCC00;
+         font-style: bold;
+         font-size: 1.8vw;
+     }
+ 
+     .research-options {
+         color: transparent;
+     }
+ 
+     .search-input{
+         margin-left:0em;
+         color: black;
+         height: 2em;
+         display:initial ;
+         border-top-left-radius: 0.4em;
+         border-bottom-left-radius: 0.4em;
+         background: white;
+         padding-top: 0.3em;
+         padding-left: 1.4em;
+         border-top: none;
+         border-bottom: none;
+         border-right: 0;
+         border-left: 0;
+         -webkit-transition: background .55s ease;
+         -moz-transition: background .55s ease;
+         -ms-transition: background .55s ease;
+         -o-transition: background .55s ease;
+         transition: background .55s ease;
+         position: relative;
+     }
+ 
+     .input-bar input.search-input::-webkit-input-placeholder {
+ 
+         color: #65737e;
+     }
+ 
+     .input-bar input.search-input:-moz-placeholder {
+         color: #65737e;
+     }
+ 
+     .input-bar input.search-input::-moz-placeholder {
+         color: #65737e;
+     }
+ 
+     .input-bar input.search-input:-ms-input-placeholder {
+         color: #65737e;
+     }
+ 
+     .input-bar input.search-input:hover, .input-bar input.search-input:focus, .input-bar input.search-input:active {
+         outline:none;
+         color: black;
+         background: #FFCC00;
+     }
+     .go-research{
+         background: transparent;
+     }
+ 
+     /* ------ PAGE CONTENT ------ */
+     div #content {
+         max-width: 100%;
+         padding: 0;
+         background-color: black;
+         color: white;
+     }
+ 
+     #container{
+         background: black;
+         position: relative;
+         margin-top: -70px;
+     }
+ 
+     .movie-banner{
+         width: 100%;
+         height: auto;
+     }
+ 
+     .text h1, h2{
+         color: #FFCC00;
+     }
+ 
+     .text h1{
+         font-size: 4.1em;
+         text-align: center;
+ 
+         margin-top:-4.7em;
+     }
+ 
+     .text h2{
+         text-align: center;
+         font-size: 1.6em;
+     }
+ 
+     .authentification{
+         background-color: black;
+         opacity: 0.6;
+         color: white;
+         text-align: center;
+         width: 20em;
+         height: 12em;
+         position:absolute;
+ 
+         top:25%;
+         left:63%;
+ 
+         border-top-left-radius: 1.2em;
+         border-bottom-left-radius: 1.2em;
+         border-top-right-radius: 1.2em;
+         border-bottom-right-radius: 1.2em;
+         border: solid 1px black;
+ 
+     }
+ 
+     .connect p{
+         position:absolute;
+         margin-top:-50px;
+         margin-left:-10px;
+         top:35%;
+         left:25%;
+ 
+     }
+ 
+     .authentification input{
+         background-color: white;
+         margin: 0.7em;
+         margin-left: auto;
+         margin-right: auto;
+         width: 100%;
+         height: 3em;
+     }
+ 
+ }
