--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 90%, transparent);
     width: 100%;
     position: fixed;
+    overflow: auto;
 }
 
 html {
@@ -65,7 +66,7 @@ body {
 #expend-menu-icon {
     width: 30px;
     height: 30px;
-    margin: 0px 10px 25px 0px;
+    margin: 0 10px 25px 0;
     background: none;
     border-style: none;
 }
@@ -240,6 +241,7 @@ button {
     max-width: 13em;
     margin-right: auto;
     margin-left: auto;
+    margin-top: 6%;
 }
 
 .search-input {
@@ -401,13 +403,14 @@ button {
      .navigation-bar {
          height: 25%;
          box-sizing: border-box;
-         padding: 0px 3%;
+         padding: 0 3%;
          width: 100%;
          background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 30%, transparent);
  
          position: fixed;
-         top: 0px;
-         margin: 0px;
+         top: 0;
+         margin: 0;
+         overflow: auto;
      }
  
      .navigation-bar{
@@ -417,7 +420,7 @@ button {
      /* ------ Left side nav-bar ------ */
  
      .umovie-logo{
-         width:15%;
+         width:20%;
      }
  
      #expend-menu-icon{
@@ -425,11 +428,12 @@ button {
      }
  
      #site-logo {
-         height: 1.3em;
-         width: 5.7em;
-         padding: 0px;
-         margin: 0.96em 20px 0 0;
-         left: 0px;
+
+         width: 100%;
+         height: auto;
+         padding: 0;
+         margin-top: 15%;
+         left: 0;
          background: transparent;
      }
  
@@ -457,6 +461,7 @@ button {
          color: white;
          border: none;
          display:-moz-groupbox;
+         margin-top: 3%;
      }
  
      .navigation-options li:hover {
@@ -472,7 +477,7 @@ button {
          background-color: transparent;
          border: none;
          color: #FFCC00;
-         font-style: bold;
+         font-weight: bold;
          font-size: 1.8vw;
      }
  
@@ -489,7 +494,7 @@ button {
          background-color: transparent;
          border: none;
          color: #FFCC00;
-         font-style: bold;
+         font-weight: bold;
          font-size: 1.8vw;
      }
  
@@ -498,7 +503,7 @@ button {
      }
  
      .search-input{
-         margin-left:0em;
+         margin-left:0;
          color: black;
          height: 2em;
          display:initial ;
@@ -589,7 +594,7 @@ button {
          height: 12em;
          position:absolute;
  
-         top:25%;
+         top:35%;
          left:63%;
  
          border-top-left-radius: 1.2em;
