--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,15 @@
     .umovie-logo {
         z-index: 10000;
     }
-    
+
     .navigation-options {
         z-index: 10;
     }
 }
-
+.movie-banner{
+    width: 100%;
+    height: auto;
+}
 #site-logo {
     width: 128px;
     padding-top: 0.5em;
@@ -112,6 +115,7 @@ button {
     -moz-animation: 1s memberSlideIn;
     -o-animation: 1s memberSlideIn;
     animation: 1s memberSlideIn;
+    top: 20%;
 }
 
 @-webkit-keyframes memberSlideIn { from { right:-250px; } to { right:0; }  }
@@ -126,6 +130,7 @@ button {
     -moz-animation: 1s memberSlideOut;
     -o-animation: 1s memberSlideOut;
     animation: 1s memberSlideOut;
+    top: 20%
 }
 
 @-webkit-keyframes memberSlideOut { from { right:0; } to { right:-250px; }  }
@@ -231,7 +236,7 @@ button {
 
 .search-bar {
     padding-top: 4em;
-    padding-bottom: 1em; 
+    padding-bottom: 1em;
     position: relative;
 }
 
@@ -261,9 +266,10 @@ button {
     -ms-transition: background .55s ease;
     -o-transition: background .55s ease;
     transition: background .55s ease;
+    width: 70%;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
     .search-input {
         top: -3px;
     }
@@ -303,12 +309,13 @@ button {
 
 #search-icon {
     bottom: 1px;
-    width: 19px;
-    height: 19px;
+    width: 100%;
+    height: auto;
     position: relative;
     margin-right: auto;
     margin-left: auto;
 }
+
 
 .go-research {
     background-image: url('../img/goSearchIcon.png');
@@ -367,260 +374,263 @@ button {
 }
 
 
- @media (min-width: 600px) {
- 
-     html {
-         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-         font-size:1.6vw;
-         -moz-osx-font-smoothing: grayscale;
-         line-height: 1.9vw;
-         background-color: black;
-         color: white;
-     }
- 
-     .umovie-logo {
-         background: none;
-         position: relative;
-     }
- 
-     body {
-         margin: 0;
-         padding: 0;
-         background-color: black;
-     }
- 
-     button {
-         cursor: pointer;
-     }
- 
-     /* ------ NAV-BAR  ----- */
-     #menu-content {
-         height: 70px;
-         position: relative;
- 
-     }
- 
-     .navigation-bar {
-         height: 25%;
-         box-sizing: border-box;
-         padding: 0 3%;
-         width: 100%;
-         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 30%, transparent);
- 
-         position: fixed;
-         top: 0;
-         margin: 0;
-         overflow: auto;
-     }
- 
-     .navigation-bar{
-         display: inline-flex
-     }
- 
-     /* ------ Left side nav-bar ------ */
- 
-     .umovie-logo{
-         width:20%;
-     }
- 
-     #expend-menu-icon{
-         display: none;
-     }
- 
-     #site-logo {
+@media (min-width: 600px) {
 
-         width: 100%;
-         height: auto;
-         padding: 0;
-         margin-top: 15%;
-         left: 0;
-         background: transparent;
-     }
- 
-     /* ------ Middle side nav-bar ------ */
-     .menu {
-         padding: 0;
-         margin: 0;
-         width: 100%;
- 
-     }
- 
-     .navigation-options {
-         position:initial;
-         width: inherit;
- 
-         list-style: none;
-         background: #33333;
-         background-color: transparent;
-     }
- 
-     .navigation-options li{
-         padding: 1em 1em 0.5em 1em;
-         top: 1em;
-         float:left;
-         color: white;
-         border: none;
-         display:-moz-groupbox;
-         margin-top: 3%;
-     }
- 
-     .navigation-options li:hover {
-         background-color: transparent;
-     }
- 
-     .navigation-options a {
-         text-decoration: none;
-         color: #96948B;
-     }
- 
-     .navigation-options li a:hover {
-         background-color: transparent;
-         border: none;
-         color: #FFCC00;
-         font-weight: bold;
-         font-size: 1.8vw;
-     }
- 
-     /* ------ Right side nav-bar ------ */
- 
-     .search-bar{
-         display: inline-flex;
-         padding: 1em 1em 0.5em;
-         float: right;
-         width: 26em;
-     }
- 
-     .search-bar li a:hover {
-         background-color: transparent;
-         border: none;
-         color: #FFCC00;
-         font-weight: bold;
-         font-size: 1.8vw;
-     }
- 
-     .research-options {
-         color: transparent;
-     }
- 
-     .search-input{
-         margin-left:0;
-         color: black;
-         height: 2em;
-         display:initial ;
-         border-top-left-radius: 0.4em;
-         border-bottom-left-radius: 0.4em;
-         background: white;
-         padding-top: 0.3em;
-         padding-left: 1.4em;
-         border-top: none;
-         border-bottom: none;
-         border-right: 0;
-         border-left: 0;
-         -webkit-transition: background .55s ease;
-         -moz-transition: background .55s ease;
-         -ms-transition: background .55s ease;
-         -o-transition: background .55s ease;
-         transition: background .55s ease;
-         position: relative;
-     }
- 
-     .input-bar input.search-input::-webkit-input-placeholder {
- 
-         color: #65737e;
-     }
- 
-     .input-bar input.search-input:-moz-placeholder {
-         color: #65737e;
-     }
- 
-     .input-bar input.search-input::-moz-placeholder {
-         color: #65737e;
-     }
- 
-     .input-bar input.search-input:-ms-input-placeholder {
-         color: #65737e;
-     }
- 
-     .input-bar input.search-input:hover, .input-bar input.search-input:focus, .input-bar input.search-input:active {
-         outline:none;
-         color: black;
-         background: #FFCC00;
-     }
-     .go-research{
-         background: transparent;
-     }
- 
-     /* ------ PAGE CONTENT ------ */
-     div #content {
-         max-width: 100%;
-         padding: 0;
-         background-color: black;
-         color: white;
-     }
- 
-     #container{
-         background: black;
-         position: relative;
-         margin-top: -70px;
-     }
- 
-     .movie-banner{
-         width: 100%;
-         height: auto;
-     }
- 
-     .text h1, h2{
-         color: #FFCC00;
-     }
- 
-     .text h1{
-         font-size: 4.1em;
-         text-align: center;
- 
-         margin-top:-4.7em;
-     }
- 
-     .text h2{
-         text-align: center;
-         font-size: 1.6em;
-     }
- 
-     .authentification{
-         background-color: black;
-         opacity: 0.6;
-         color: white;
-         text-align: center;
-         width: 20em;
-         height: 12em;
-         position:absolute;
- 
-         top:35%;
-         left:63%;
- 
-         border-top-left-radius: 1.2em;
-         border-bottom-left-radius: 1.2em;
-         border-top-right-radius: 1.2em;
-         border-bottom-right-radius: 1.2em;
-         border: solid 1px black;
- 
-     }
- 
-     .connect p{
-         position:absolute;
-         margin-top:-50px;
-         margin-left:-10px;
-         top:35%;
-         left:25%;
- 
-     }
- 
-     .authentification input{
-         background-color: white;
-         margin: 0.7em;
-         margin-left: auto;
-         margin-right: auto;
-         width: 100%;
-         height: 3em;
-     }
- 
- }
+    html {
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size:1.6vw;
+        -moz-osx-font-smoothing: grayscale;
+        line-height: 1.9vw;
+        background-color: black;
+        color: white;
+    }
+
+    .umovie-logo {
+        background: none;
+        position: relative;
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: black;
+    }
+
+    button {
+        cursor: pointer;
+    }
+
+    /* ------ NAV-BAR  ----- */
+    #menu-content {
+        height: 70px;
+        position: relative;
+
+    }
+
+    .navigation-bar {
+        height: 25%;
+        box-sizing: border-box;
+        padding: 0 3%;
+        width: 100%;
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 30%, transparent);
+
+        position: fixed;
+        top: 0;
+        margin: 0;
+        overflow: auto;
+    }
+
+    .navigation-bar{
+        display: inline-flex
+    }
+
+    /* ------ Left side nav-bar ------ */
+
+    .umovie-logo{
+        width:20%;
+    }
+
+    #expend-menu-icon{
+        display: none;
+    }
+
+    #site-logo {
+
+        width: 100%;
+        height: auto;
+        padding: 0;
+        margin-top: 15%;
+        left: 0;
+        background: transparent;
+    }
+
+    /* ------ Middle side nav-bar ------ */
+    .menu {
+        padding: 0;
+        margin: 0;
+        width: 100%;
+
+    }
+
+    .navigation-options {
+        position:initial;
+        width: inherit;
+
+        list-style: none;
+        background: #33333;
+        background-color: transparent;
+    }
+
+    .navigation-options li{
+        padding: 1em 1em 0.5em 1em;
+        top: 1em;
+        float:left;
+        color: white;
+        border: none;
+        display:-moz-groupbox;
+        margin-top: 3%;
+    }
+
+    .navigation-options li:hover {
+        background-color: transparent;
+    }
+
+    .navigation-options a {
+        text-decoration: none;
+        color: #96948B;
+    }
+
+    .navigation-options li a:hover {
+        background-color: transparent;
+        border: none;
+        color: #FFCC00;
+        font-weight: bold;
+        font-size: 1.8vw;
+    }
+
+    /* ------ Right side nav-bar ------ */
+
+    .search-bar{
+        display: inline-flex;
+        padding: 1em 1em 0.5em;
+        float: right;
+        width: 26em;
+    }
+
+    .search-bar li a:hover {
+        background-color: transparent;
+        border: none;
+        color: #FFCC00;
+        font-weight: bold;
+        font-size: 1.8vw;
+    }
+
+    .research-options {
+        color: transparent;
+    }
+
+    .search-input{
+        margin-left:0;
+        color: black;
+        height: 2em;
+        display:initial ;
+        border-top-left-radius: 0.4em;
+        border-bottom-left-radius: 0.4em;
+        background: white;
+        padding-top: 0.3em;
+        padding-left: 1.4em;
+        border-top: none;
+        border-bottom: none;
+        border-right: 0;
+        border-left: 0;
+        -webkit-transition: background .55s ease;
+        -moz-transition: background .55s ease;
+        -ms-transition: background .55s ease;
+        -o-transition: background .55s ease;
+        transition: background .55s ease;
+        position: relative;
+        width: 70%;
+    }
+
+    .input-bar input.search-input::-webkit-input-placeholder {
+
+        color: #65737e;
+    }
+
+    .input-bar input.search-input:-moz-placeholder {
+        color: #65737e;
+    }
+
+    .input-bar input.search-input::-moz-placeholder {
+        color: #65737e;
+    }
+
+    .input-bar input.search-input:-ms-input-placeholder {
+        color: #65737e;
+    }
+
+    .input-bar input.search-input:hover, .input-bar input.search-input:focus, .input-bar input.search-input:active {
+        outline:none;
+        color: black;
+        background: #FFCC00;
+    }
+    .go-research{
+        background: transparent;
+    }
+
+    /* ------ PAGE CONTENT ------ */
+    div #content {
+        max-width: 100%;
+        padding: 0;
+        background-color: black;
+        color: white;
+    }
+
+    #container{
+        background: black;
+        position: relative;
+        margin-top: -70px;
+    }
+
+    .movie-banner{
+        width: 100%;
+        height: auto;
+    }
+
+    .text h1, h2{
+        color: #FFCC00;
+    }
+
+    .text h1{
+        font-size: 4.1em;
+        text-align: center;
+
+        margin-top:-4.7em;
+    }
+
+    .text h2{
+        text-align: center;
+        font-size: 1.6em;
+    }
+
+    .authentification{
+        background-color: black;
+        opacity: 0.6;
+        color: white;
+        text-align: center;
+        width: 20em;
+        height: 12em;
+        position:absolute;
+
+        top:35%;
+        left:63%;
+
+        border-top-left-radius: 1.2em;
+        border-bottom-left-radius: 1.2em;
+        border-top-right-radius: 1.2em;
+        border-bottom-right-radius: 1.2em;
+        border: solid 1px black;
+
+    }
+
+    .connect p{
+        position:absolute;
+        margin-top:-50px;
+        margin-left:-10px;
+        top:35%;
+        left:25%;
+
+    }
+
+    .authentification input{
+        background-color: white;
+        margin: 0.7em;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: 3em;
+    }
+    .search-container{
+        width: 100%;
+    }
+}
