--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -1,7 +1,7 @@
 <img class="movie-banner" src="http://www.seriesandreviews.com/wp-content/uploads/2016/01/Young-adults-watching-TV.jpg"></img>
 <div class="text">
     <h1>Hello, welcome to UMovie.</h1>
-    <h2>Watch current episodes, full seasons, original series, and hit movies all in one place.</h2>
+    <h2>Get all the movies, TV shows and celebrities content in one place!</h2>
 </div>
 
 <div class="authentification">
